fix dashboard layout spacing

--- a/src/components/UserCard/style.module.css
+++ b/src/components/UserCard/style.module.css
@@ -6,6 +6,7 @@
     padding: 30px;
     background: var(--linear-gr-3);
     border-radius: 5px;
+    gap:30px;
 }
 
 .cardInactive {
@@ -29,10 +30,6 @@
     justify-content: space-between;
     height: fit-content;
     min-width: max-content;
-}
-
-.picture {
-    padding-right: 30px;
 }
 
 .avatar {
